<resources>
    <string name="app_name">TipCounter</string>
    <string name="num_people">Enter Number Of People: </string>
    <string name="bill_amount">Bill Total:</string>
    <string name="fifteen_percent">15% </string>
    <string name="eighteen_percent">18% </string>
    <string name="twenty_percent">20% </string>
    <string name="other_amount">Other: </string>
    <string name="other_tip">Enter Tip Amount: </string>
    <string name="reset">Deselect Choices</string>
    <string name="calc">Calculate</string>
    <string name="tipAmnt">Total Tip: $%1$s</string>
    <string name="totalAmnt">Total Amount: $%1$s</string>
    <string name="splitAmnt">Split Amount: $%1$s</string>
    <string name="peopleError">Too Few People Entered</string>
    <string name="tipError">Tip Must Be Greater Than 1%</string>
    <string name="billError">Bill Must Be Greater Than $1.00</string>
    <string name="peopleKey">peopleKey</string>
    <string name="totalKey">totalKey</string>
    <string name="tipKey">tipKey</string>
    <string name="cleared">entries cleared</string>
    <string name="fifteenTip">15% tip</string>
    <string name="eighteenTip">18% tip</string>
    <string name="twentyTip">20% tip</string>
    <string name="enterTip">custom tip</string>
    <string name="tipTotalKey">tipTotalKey</string>
    <string name="fullTotalKey">fullTotalKey</string>
    <string name="splitTotalKey">splitTotalKey</string>
    <string name="cheapPerson">A Tip less than 15% is pretty cheap&#8230;</string>

</resources>
